Setup ci/cd and ignore temporary files

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,12 @@ yarn-error.*
 *.tsbuildinfo
 
 app-example
+
+# build files
+android
+ios
+# test temporary files
+.logs
+artifact
+*.mp4
+report.xml
