--- a/.github/workflows/ios.yaml
+++ b/.github/workflows/ios.yaml
@@ -71,7 +71,7 @@ jobs:
           done
 
       - name: ♻️ Save Expo Cache
-        id: expo-cache
+        id: expo-cache 2
         uses: actions/cache/save@v4
         with:
           path: ~/{.expo,ios,android,node_modules}
