--- a/.github/workflows/ios.yaml
+++ b/.github/workflows/ios.yaml
@@ -37,8 +37,9 @@ jobs:
           path: |
             node_modules
             ios/Pods
-          key: ${{ runner.os }}-deps-${{ hashFiles('ios/Podfile.lock') }}
+	  key: ${{ runner.os }}-deps-${{ hashFiles('package-lock.json', 'ios/Podfile.lock') }}
           restore-keys: |
+            ${{ runner.os }}-deps-${{ hashFiles('package-lock.json', 'ios/Podfile.lock') }}
             ${{ runner.os }}-deps-
 
       - name: Install dependencies
