--- a/.github/workflows/ios.yaml
+++ b/.github/workflows/ios.yaml
@@ -1,4 +1,4 @@
-name: Router Maestro E2E
+name: Router Maestro E2E iOS
 
 on:
   pull_request:
@@ -8,7 +8,7 @@ on:
     branches: [main, cicd]
 
 jobs:
-  expo-go-dev-maestro-router:
+  expo-dev-client-maestro-ios:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
